Bug 1432610 - Disable D2D on Win7 on Intel Haswell for old graphics drivers r=jrmuizel